feat: hide scrollbars

--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
         -webkit-touch-callout: none;
         -webkit-tap-highlight-color: transparent;
       }
+
+      ::-webkit-scrollbar {
+        display: none;
+      }
     </style>
   </head>
 
